fixed subject spacing issues for various viewports

--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ button:hover{
     align-items: center;
     
     width: 82%;
-    height: 90%;
+    height: 80%;
     
     
     margin-bottom: 15px;
@@ -91,7 +91,7 @@ button:hover{
     justify-content: center;
     align-items: center;
 
-    gap: 40px;
+    gap: 3vh;
     width: inherit;
     height: inherit;
     padding: 10px;
@@ -110,8 +110,8 @@ button:hover{
     justify-content: space-between;
     align-items: center;
 
-    gap: 15px;
-    padding: 20px;
+    gap: 10px;
+    padding: 15px;
     width: inherit;
     min-width: 60vw;
 
